spec/lib/cli/log/errors/configurerMissing.js
// Generated by CoffeeScript 1.12.3
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: 'returns `codeFolderUndefined` error message',
      i: ['path'],
      e: "Failed to load configurer file from " + (dd.helper.c.bright('path'))
    });
  };

}).call(this);
